feat(section): update component token

--- a/packages/components/base/source/section/_section-vars.scss
+++ b/packages/components/base/source/section/_section-vars.scss
@@ -1,69 +1,41 @@
 $name-: 'l-section';
-
 $host: (
-  ':root, [ks-theme], [ks-inverted]': (
-    content-width-narrow: 46.5rem,
-    content-width-default: 62rem,
-    content-width-wide: 75rem,
-    content-width-max: 120rem,
-    content-width-full: 120rem,
-    content-padding: var(--ks-spacing-m),
-    background-default: var(--ks-background-color-default),
-    background-accent: var(--ks-background-color-accent),
-    background-bold: var(--ks-color-fg-alpha-4),
-    space-default: var(--ks-spacing-xxl),
-    space-small: calc(var(--l-section--space-default) / 2),
-    gutter-small: var(--ks-spacing-xs),
-    gutter-default: var(--ks-spacing-m),
-    gutter-large: var(--ks-spacing-xl),
-  ),
   '.l-section': (
-    background: var(--l-section--background-default),
-    gutter: var(--l-section--gutter-default),
-  ),
-  '.l-section--accent': (
-    background: var(--l-section--background-accent),
-  ),
-  '.l-section--bold': (
-    background: var(--l-section--background-bold),
-  ),
-  '.l-section--gutter-none': (
-    gutter: 0px,
-  ),
-  '.l-section--gutter-small': (
-    gutter: var(--l-section--gutter-small),
-  ),
-  '.l-section--gutter-large': (
-    gutter: var(--l-section--gutter-large),
+    content-padding: var(--ks-spacing-m),
+    background-color_default: var(--ks-background-color-default),
+    background-color_accent: var(--ks-background-color-accent),
+    background-color_bold: var(--ks-color-fg-alpha-4),
+    space_default: var(--ks-spacing-xxl),
+    space_small: calc(var(--l-section--space_default) / 2),
+    gutter_none: 0,
+    gutter_small: var(--ks-spacing-xs),
+    gutter_default: var(--ks-spacing-m),
+    gutter_large: var(--ks-spacing-xl),
   ),
 ) !default;
 
-$col: (
-  '.l-section__content': (
-    min-width: var(--l-section_tile-width--default),
+$content: (
+  '.l-section': (
+    min-width: var(--l-section_tile-width_default),
     max-width: 1fr,
-    repeat: 'auto-fit',
-  ),
-  '.l-section__content--tile': (
-    repeat: 'auto-fill',
-  ),
-  '.l-section__content--list': (
-    repeat: 1,
-  ),
-) !default;
-
-$tile-width: (
-  '.l-section__content': (
-    smallest: 14rem,
-    default: 18rem,
-    medium: var(--l-section--content-width-narrow),
-    large: var(--l-section--content-width-default),
-    largest: var(--l-section--content-width-wide),
+    repeat_default: 'auto-fit',
+    repeat_tile: 'auto-fill',
+    repeat_list: 1,
+    tile-width_smallest: 14rem,
+    tile-width_default: 18rem,
+    tile-width_medium: var(--l-section--content-width-narrow),
+    tile-width_large: var(--l-section--content-width-default),
+    tile-width_largest: var(--l-section--content-width-wide),
+    width_narrow: 46.5rem,
+    width_default: 62rem,
+    width_wide: 75rem,
+    width_max: 120rem,
+    width_full: 120rem,
   ),
 ) !default;
 
 $buttons: (
-  '.l-section__content': (
+  '.l-section': (
     space-before: var(--l-section--gutter),
   ),
 ) !default;
@@ -73,9 +45,9 @@ $slider-arrow: (
     size: 2.5rem,
     padding: var(--ks-spacing-xs),
     color: var(--ks-color-primary),
-    opacity-disabled: 0.3,
     opacity: 0.6,
-    opacity-hover: 0.9,
+    opacity_disabled: 0.3,
+    opacity_hover: 0.9,
     background: var(--ks-background-color-interface-interactive),
   ),
 ) !default;
