feat(tag-label): replace radius token rem value with design token

--- a/packages/components/base/source/tag-label/_tag-label-vars.scss
+++ b/packages/components/base/source/tag-label/_tag-label-vars.scss
@@ -5,27 +5,25 @@ $host: (
     background-color: var(--ks-background-color-interface),
     background-color-hover: var(--ks-background-color-interface-hover),
     border: null,
+    border-radius: var(--ks-border-radius-pill),
     color: var(--ks-text-color-interface),
     color-hover: var(--ks-text-color-interface-hover),
   ),
   '.c-tag-label--s': (
     font: var(--ks-font-interface-xs),
     font-weight: var(--ks-font-weight-regular),
-    border-radius: 1rem,
     vertical-padding: 0.325rem,
     horizontal-padding: 0.65rem,
   ),
   '.c-tag-label--m': (
     font: var(--ks-font-interface-s),
     font-weight: var(--ks-font-weight-regular),
-    border-radius: 1.25rem,
     vertical-padding: 0.4rem,
     horizontal-padding: 1rem,
   ),
   '.c-tag-label--l': (
     font: var(--ks-font-interface-m),
     font-weight: var(--ks-font-weight-regular),
-    border-radius: 1.5rem,
     vertical-padding: 0.5rem,
     horizontal-padding: 1.25rem,
   ),
