--- a/packages/components/base/source/contact/contact.scss
+++ b/packages/components/base/source/contact/contact.scss
@@ -1,20 +1,39 @@
 @use 'sass:meta';
 @use 'sass:math';
-@use '@kickstartds/core/source/core/custom-properties';
 @use './contact-vars';
-
-$vars: meta.module-variables(contact-vars);
-@include custom-properties.styles($vars);
 
 .c-contact {
   display: flex;
   flex-wrap: wrap;
-  margin: calc(-1 * var(--c-contact--gutter));
+  gap: var(--c-contact--gap);
 
   > * {
-    margin: var(--c-contact--gutter);
-    flex-basis: calc((var(--c-contact--wrap-threshold) - 100%) * 999);
+    flex-basis: var(--c-contact--flex-basis);
     flex-grow: 1;
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+    gap: var(--c-contact__body--gap);
+  }
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    gap: var(--c-contact__header--gap);
+  }
+
+  &__name {
+    font: var(--c-contact__name--font);
+    color: var(--c-contact__name--color);
+    font-weight: var(--c-contact__name--font-weight);
+  }
+
+  &__title {
+    font: var(--c-contact__title--font);
+    color: var(--c-contact__title--color);
+    font-weight: var(--c-contact__title--font-weight);
   }
 
   &__image {
@@ -22,33 +41,34 @@ $vars: meta.module-variables(contact-vars);
   }
 
   &__links {
-    font: var(--ks-font-interface-s);
+    display: flex;
+    flex-direction: column;
+    gap: var(--c-contact__links--gap);
+    font: var(--c-contact__links--font);
     list-style: none;
     padding: 0;
     margin: 0;
 
     .icon {
-      width: 1.5rem;
-      height: 1.5rem;
-      margin-right: 0.5rem;
+      width: var(--c-contact__links__icon--size);
+      height: var(--c-contact__links__icon--size);
+      color: var(--c-contact__links__icon--color);
+      margin-right: var(--c-contact__links__icon--margin-right);
     }
-  }
-
-  &__link {
-    margin-bottom: 0.5rem;
-    display: inline-block;
-  }
-
-  &__copy {
-    margin-top: 1rem;
   }
 
   .c-headline {
-    --c-headline--margin-bottom: 1rem;
-
-    &__subheadline {
-      --c-headline_subheadline--margin: 0;
-      --c-headline_subheadline--color: var(--ks-color-fg-alpha-3);
-    }
+    --c-headline--color: var(--c-contact__headline--color);
+    --c-headline--font: var(--c-contact__headline--font);
+    --c-headline--font-weight: var(--c-contact__headline--font-weight);
+    --c-headline__subheadline--color: var(
+      --c-contact__headline__subheadline--color
+    );
+    --c-headline__subheadline--font: var(
+      --c-contact__headline__subheadline--font
+    );
+    --c-headline__subheadline--font-weight: var(
+      --c-contact__headline__subheadline--font-weight
+    );
   }
 }
