--- a/packages/components/base/source/divider/_divider-vars.scss
+++ b/packages/components/base/source/divider/_divider-vars.scss
@@ -1,11 +1,5 @@
-$name-: 'c-divider';
-
-$host: (
-  '.c-divider': (
-    background: var(--ks-color-fg-alpha-9),
-    height: 1px,
-  ),
-  '.c-divider--accent': (
-    background: var(--ks-color-primary-alpha-9),
-  ),
-) !default;
+.c-divider {
+  --c-divider--background: var(--ks-color-fg-alpha-9);
+  --c-divider--height: 1px;
+  --c-divider_accent--background: var(--ks-color-primary-alpha-9);
+}
