--- a/packages/components/base/source/lightbox-image/_lightbox.scss
+++ b/packages/components/base/source/lightbox-image/_lightbox.scss
@@ -1,32 +1,39 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/custom-properties';
 @use 'photoswipe/dist/photoswipe.css';
 @use './lightbox-vars';
 
-$vars: meta.module-variables(lightbox-vars);
-@include custom-properties.styles($vars);
-
 .pswp {
-  --pswp-bg: var(--c-lightbox--bg);
-  --pswp-placeholder-bg: var(--c-lightbox-placeholder-bg);
+  --pswp-bg: var(--c-lightbox--background);
+  --pswp-placeholder-bg: var(--c-lightbox__placeholder--background);
   --pswp-root-z-index: var(--c-lightbox--root-z-index);
-  --pswp-icon-color: var(--c-lightbox--icon-color);
-  --pswp-icon-color-secondary: var(--c-lightbox--icon-color-secondary);
-  --pswp-icon-stroke-color: var(--c-lightbox--stroke-color);
-  --pswp-icon-stroke-width: var(--c-lightbox--stroke-width);
+  --pswp-icon-color: var(--c-lightbox__icon--color);
+  --pswp-icon-color-secondary: var(--c-lightbox__icon--color-secondary);
+  --pswp-icon-stroke-color: var(--c-lightbox__icon--stroke-color);
+  --pswp-icon-stroke-width: var(--c-lightbox__icon--stroke-width);
   --pswp-error-text-color: var(--c-lightbox--error-text-color);
 
-  font: var(--ks-font-interface-s);
+  .pswp__counter {
+    color: var(--pswp-icon-color);
+    text-shadow: var(--c-lightbox__counter--text-shadow);
+    font: var(--c-lightbox__counter--font);
+    font-weight: var(--c-lightbox__counter--font-weight);
+  }
+
+  .pswp__icn-shadow {
+    filter: drop-shadow(var(--c-lightbox__icon--shadow));
+    fill: unset;
+  }
 
   &__caption {
+    font: var(--c-lightbox__caption--font);
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     text-align: center;
-    color: var(--ks-color-fg-inverted);
+    color: var(--c-lightbox__caption--color);
     padding: 15px 0;
-    background-color: var(--ks-color-fg-alpha-7);
+    background-color: var(--c-lightbox__caption--background-color);
 
     &:empty {
       padding: 0;
